# nexus

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  tmp_socket_test.rs
.gemini/: GEMINI.md
.github/workflows/: ci.yml
docs/: TESTING.md  TUI_MODERNIZATION_PLAN.md  TUI_QUICK_START.md
src/: lib.rs  main.rs
src/channel/: manager.rs  mod.rs  pty_handler.rs
src/client/: app.rs  commands.rs  completion.rs  input.rs  mod.rs  renderer.rs  ui.rs
src/config/: mod.rs
src/protocol/: message.rs  mod.rs
src/server/: connection.rs  listener.rs  mod.rs  session.rs
tests/: channel_manager_tests.rs  protocol_tests.rs  pty_channel_tests.rs  server_tests.rs
